<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
  	tools:ignore="MissingTranslation" >
  
    <string name="app_name">اختبار القران</string>
    <string name="txt_start">بسم الله الرحمن الرحيم</string>
    <string name="txt_end">اختر الاجابة الصحيحة</string>
    <string name="txt_score">نقاط</string>
    <string name="txt_ok">حسنا</string>   
    <string name="txt_no">إلغاء</string>   
    <string name="txt_review">راجعها من المصحف</string>   
    <string name="txt_instruction">اختر التكملة الصحيحة</string>
    <string name="txt_instruction_SURANAME">اختر اسم السورة</string>
    <string name="txt_instruction_SURAAYACOUNT">اختر عدد ايات السورة</string>
    <string name="txt_instruction_MAKKI">اختر بيان السورة</string>
    <string name="txt_instruction_AYANUMBER">اختر رقم الاية</string>
            
    <string name="pref_fixedLevel_sum">إيقاف خاصية المستوى المتغير العشوائي واختيار مستوى ثابت</string>
    <string name="pref_fixedLevel_title">تثبيت مستوى الأسئلة</string>
    <string name="pref_userLevel_title">اختر مستوى الأسئلة</string>
    <string name="pref_userLevel_sum">المستوي</string>
    <string name="pref_studyListTitle">قم بتحديد نطاق الحفظ</string>
	<string name="pref_studyListToggle">إختر الجميع أو لاشيء</string>

	<string name="installQViewer_title">لا يوجد عارض مصحف</string>
	<string name="installQViewer_msg">ليس لديك اي برنامج يعرض النطاق ":quran"، يمكنك تنزيل برنامج القرآن اندرويد المتوافق معه</string>
	<string name="installQViewer_install">تنزيل البرنامج</string>
		
	<string name="daily_dialogue_title">الاختبار اليومي جاهز</string>
	<string name="daily_dialogue_ask">تنافس مع اعضاء شبكة اختبار القران، عشرة أسئلة سريعة في نطاق حفظك، هل ترغب ان تبدأ الآن؟</string>
	<string name="daily_dialogue_later">في وقت لاحق</string>
			
	<string name="add_values">Add values to the chart</string>    
	<string name="x">X</string>    
	<string name="y">Y</string>
	<string name="add">Add</string>
	<string name="new_series">New series</string>
	<string name="_dashboard_title">إختبار القرآن</string>
	<string name="_dashboard_start_QQ">إبدأ الاختبار</string>
	<string name="_dashboard_study_list">نطاق الحفظ</string>
	<string name="_dashboard_show_chart">التقدم الزمني</string>
	<string name="_dashboard_us">تفاعل معنا</string>
	<string name="menuitem_feedback">شاركنا برأيك</string>
	<string name="menuitem_faq">الاسئلة المتداولة</string>
	<string name="menuitem_rate">اضف تقييمك</string>
	<string name="menuitem_license">رخصة البرنامج</string>
	
    <string name="faq">
        &lt;b>ما هو عدد الأسئلة الموجودة بالبرنامج؟&lt;/b>
        &lt;br/>
لا يوجد أي سؤال مسجل بالبرنامج، انما يوجد محرك بحث ذكي وسريع صمم خصيصا لإنشاء الأسئلة،
 قد يصل مجموع الاسئلة الممكنة لعشرات الالاف. كل مستخدم لاختبار القران يظهر له أسئلة مختلفة،
  وقد تتكرر الاسئلة في حالات نادرة.
        &lt;br/>&lt;br/>        
        &lt;b>هل تنقص النقاط؟&lt;/b>
        &lt;br/>نعم تنقص النقاط عند الاجابة الخاطئة. بالنسبة للاسئلة الخاصة فانها لا تنقص نقاطك.
        &lt;br/>&lt;br/>        
        &lt;b>كيف يتم احتساب النقاط؟&lt;/b>
        &lt;br/>
ليست كل الاسئلة لها نفس عدد النقاط.
 في بدء دخول الاختبار، حين تتم اجابة صحيحة في سورة
 او جزء يتم اضافة نقاط قليلة، فاذا تكررت 
 الاجابات الصحيحة عن نفس السورة او الجزء يكون قد ثبت دقة 
 الحفظ فتزيد النقاط عن كل سؤال.
 اذا تكررت الاجابة الصحيحة وزادت عن حد معين في نفس السورة او الجزء
 تبدأ النقاط في الانخفاض مجددا. فهذا النظام يبرز قوة
 الحفظ، يزيد التنافس بين الحفاظ، ويعدل بين الحفاظ اذا لم تتقارب عدد الاسئلة.
        &lt;br/>
        &lt;br/>&lt;b>ما هي الاسئلة الخاصة؟&lt;/b>
        &lt;br/>  هي أسئلة نوعية لا تختبر مجرد حفظ توالي ايات القران . الاسئلة الخاصة تظهر بشكل عشوائي كل خمسة أسئلة ويكون نص التعليمات بخلفية زرقاء، ولا يتم انتقاص نقاط عند الاجابة الخاطئة. يمكن إيقاف الاسئلة الخاصة بالضغط على الزر الأزرق بالقائمة العلوية أثناء الاختبار. لكل نوع من الاسئلة الخاصة عدد نقاط ثابتة يتم الحصول عليها مع الاجابة الصحيحة:
 &lt;br/> - اذكر اسم السورة:  نقطتان
 &lt;br/> - اذكر عدد ايات السورة: 4 نقاط
 &lt;br/> - اذكر رقم الاية: 7 نقاط 
        &lt;br/>
    </string>
    <string name="license"><![CDATA[
        <b>ماهي رخصة شبكة اختبار القران؟</b>
        <br />
البرنامج مفتوح المصدر شيفرته توزع تحت الترخيص العام (<a href="http://www.gnu.org/licenses/gpl.html">GPL v3</a>) كما يمكن ترخيصه للاستخدام التجاري كبديل. 
        <br />
        <br /><b>ما هي الرخص المستخدمة لبناء البرنامج؟</b>
        <br />
        - <a href="http://www.tanzil.net">Tanzil.net</a> (<a href="http://creativecommons.org/licenses/by/3.0">CC-BY v3</a>) <br />
        - <a href="http://www.android-feedback.com">Android-feedback</a> (<a href="http://opensource.org/licenses/MIT">MIT</a>) <br />
        - <a href="http://www.achartengine.org">aChartEngine.org</a> (<a href="http://www.apache.org/licenses/LICENSE-2.0">Apache v2</a>) <br />
        - <a href="http://actionbarsherlock.com">ActionBar Sherlock</a> (<a href="http://www.apache.org/licenses/LICENSE-2.0">Apache v2</a>) <br />
  ]]>
  </string>
    <string name="smiley">;-)</string>
  
</resources>
