<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory 
        android:title="تحديد مستوى الاختبار"
        android:key="first_category">
        
        <CheckBoxPreference 
            android:key="pref_fixedLevel"
            android:summary="@string/pref_fixedLevel_sum"
            android:title="@string/pref_fixedLevel_title" 
            android:defaultValue="true"
        />
        
        <ListPreference 
            android:key="pref_userLevel"
            android:title="@string/pref_userLevel_title"
            android:summary="@string/pref_userLevel_sum"
            android:defaultValue="1" 
            android:entries="@array/userLevels"
            android:entryValues="@array/userLevelsValues"
            android:dependency="pref_fixedLevel"
        />
            
 </PreferenceCategory>
    
</PreferenceScreen>


