<net.quranquiz.ui.QQDashboardLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:layoutDirection="rtl"
    android:background="#f8f9fe" >
    
    <Button
        android:id="@+id/btnQQQuestionaire"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/qqstart"
        android:text="@string/_dashboard_start_QQ" />
     
    <Button
        android:id="@+id/btnSettings"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/qqrange"
        android:text="@string/_dashboard_study_list" />
        
    <Button
        android:id="@+id/btnScoreHistory"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/qqstat"
        android:text="@string/_dashboard_show_chart" />

    <Button
        android:id="@+id/btnInfo"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/qqinfo"
        android:text="@string/_dashboard_us" />	
    <!--  Add more Buttons -->



</net.quranquiz.ui.QQDashboardLayout>
